--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
         - #BLOG
       -->
 
-      <article class="blog" data-page="blog">
+<!--       <article class="blog" data-page="blog">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
@@ -1051,7 +1051,7 @@
         </section>
 
       </article>
-
+ -->
 
 
 
