--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <section class="about-text">
           <p>
-            I'm Creative UI/UX Designer ans Web Developer from Agra, India, working in web development and print media.
+            I'm Creative UI/UX Designer and Web Developer from Agra, India, working in web development and print media.
             I enjoy
             turning complex problems into simple, beautiful and intuitive designs.
           </p>
@@ -283,7 +283,7 @@
 
             </li>
 
-            <li class="service-item">
+<!--             <li class="service-item">
 
               <div class="service-icon-box">
                 <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
@@ -297,7 +297,7 @@
                 </p>
               </div>
 
-            </li>
+            </li> -->
 
           </ul>
 
@@ -404,7 +404,7 @@
           - clients
         -->
 
-        <section class="clients">
+<!--         <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -422,8 +422,8 @@
               </a>
             </li>
 
-            <li class="clients-item">
-              <a href="#">
+            <li class="clients-item"> -->
+<!--               <a href="#">
                 <img src="./assets/images/logo-3-color.png" alt="client logo">
               </a>
             </li>
@@ -451,7 +451,7 @@
         </section>
 
       </article>
-
+ -->
 
 
 
