--- a/index.html
+++ b/index.html
@@ -400,11 +400,11 @@
         </div>
 
 
-        <!--
-          - clients
-        -->
+        
+           clients
+        
 
-<!--         <section class="clients">
+       <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -422,8 +422,8 @@
               </a>
             </li>
 
-            <li class="clients-item"> -->
-<!--               <a href="#">
+            <li class="clients-item"> 
+              <a href="#">
                 <img src="./assets/images/logo-3-color.png" alt="client logo">
               </a>
             </li>
@@ -451,7 +451,7 @@
         </section>
 
       </article>
- -->
+ 
 
 
 
